fix: update test cases and change BloodType to String
Add FindCommandTest and fix test case  errors.
Update BloodType to be a String instead of an Enum